tests/neg/i24250.scala

class C
val cc =
  new C
  end new // error
val single =
  new C: end new // error // error
